#	in SetDataClass.__init__(self, cluster) cluster as a reference
#	to powerman's global ClusterClass structure, which has 
#	information (like fanout) that may be needed in the low
#	level handler.  The following are also required:
#	SetDataClass.add(self, node)
#	SetDataClass.do_com(self)
#	node is reference to NodeClass object.  
#	There are small wrapper functions embodying the calls to
#	rmc and ether-wake, which are now located in the 
#	/usr/lib/powerman directory.  That directory no longer has 
#	subdirectories.  The pm program just holds command line 
#	processing and initialization code.  All the actual work is 
#	the new pm_classes module.  There is also a new pm_utils 
#	module that holds a few things like error handling and logging
#	that are usefull to all modules.  Finally, all the old man
#	pages have been removed in favor of just the pm.1 and 
#	powerman.conf.5 pages.
#                  Forthermore, the I/O to icebox units has been 
#	reimplemented using os.read/write.  All such I/O is now mediated
#       by a single "prompt" command.  The signal handling for the
#	alarm is with the prompt command and both are in the pm_utils
#       module.   Other minor changes and bug fixes.
#
# v. 0-2-0: 
#	2001-10-4
#	           Added a random 0.25 to 1.0 second back off in 
#	attempt to acquire lock on tty in icebox, with 60 retries before
#	failure.  This is in support of conman's spawning of n parallel
#	threads to invoke powerman one node at a time for resets.
#	Also removed any delay in querying mode and set delays back to 
#	0.3 seconds per port or 3.5 seconds per icebox.
#
#       2001-10-6
#	          icebox locking had an incrrect reference to "locked"
#	rather than self.locked in the tty class method "do_command".
#	The comm == 'temp' case was misshandled in pm.  The "message"
#	for temperature checking a single node had a syntax error.
####################################################################